# antenna-model

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml
antenna-model/: Cargo.toml  benchmark_results.txt  extract_bench_results.sh
antenna-model/benches/: aperture_integration_benchmarks.rs  computation_modes.rs  heatmap_benchmarks.rs
antenna-model/src/: error.rs  lib.rs  main.rs
antenna-model/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  schemas.rs
antenna-model/src/config/: mod.rs  settings.rs
antenna-model/src/data/: loader.rs  mod.rs  repository.rs  types.rs
antenna-model/src/model/: bessel.rs  coordinates.rs  coordinates_3d.rs  correction_interpolator.rs  direct_path.rs  edge_cases.rs  geometry.rs  illumination.rs  integration.rs  mesh.rs  mod.rs  numerical_stability.rs  pattern.rs  phase.rs  ray_trace.rs  surface.rs
antenna-model/src/service/: batch.rs  cache.rs  evaluator.rs  h3_link_budget.rs  heatmap.rs  mod.rs  test_support.rs  validator.rs
antenna-model/tests/: README.md  beam_steering_direction.rs  coma_aberration_test.rs  example_requests_deserialize.rs  feed_position_is_pointing_target.rs  feed_steering_test.rs  integration.rs  reference_validation.rs  server_test.rs
antenna-model/tests/fixtures/: design_specs_test_simple.yaml  design_specs_test_uncalibrated.yaml  test_antennas.yaml  test_service.yaml
antenna-model/tests/fixtures/measurements/: test_boresight_sband.csv  test_boresight_xband.csv  test_full_grid_primary.csv  test_full_grid_primary_dense.csv
antenna-model/tests/fixtures/reference_datasets/: dsn_34m_bwg.psv  dsn_70m.psv  gbt_100m.psv
antenna-model/tests/fixtures/reference_datasets/sidelobe_data/: nasa_cr159703_pattern_peaks.psv  ntia_84_164_antennas.psv  ntia_84_164_sidelobe_statistics.psv
antenna-model/tests/integration/: api_tests.rs  budget_tests.rs  concurrent_tests.rs  error_tests.rs  h3_link_budget_tests.rs  helpers.rs  mod.rs  off_axis_warning_tests.rs  partial_calibration_tests.rs  ray_trace_stub_warning_tests.rs  resilience_tests.rs  timeout_tests.rs
calibrate/: Cargo.toml  README.md  antenna_classes.yaml
calibrate/examples/: antenna_config_example.yaml  antenna_config_no_tuning.yaml
calibrate/src/: antenna_config.rs  artifact_export.rs  boresight_calibration.rs  correction_surface.rs  design_specs_loader.rs  frequency_correction.rs  lib.rs  main.rs  mod.rs  parameter_tuner.rs  parser.rs  serializer.rs  validator.rs
calibrate/tests/: artifact_export_integration_test.rs  correction_surface_test.rs  integration_test.rs  parser_integration_test.rs
calibrate/tests/fixtures/: sample_measurements.csv
calibration_data/: antennas.yaml
calibration_data/design_specs/: large_dsn.yaml  medium_dsn.yaml  small_groundstation.yaml
config/: service.yaml
design_specs/: medium_groundstation.yaml  small_groundstation.yaml  solid_reflector.yaml
docs/: antenna-model-design-doc.md  api-documentation.md  architecture.md  calibration-workflow-guide.md  code-review-checklist.md  domain-contract.md  findings-2026-07-10-ka-phase-center-defocus.md  findings-2026-07-13-off-axis-integration-aliasing.md  implementation-plan-sprints-1-4-summary.md  implementation-plan.md  kubernetes-deployment.md  partial-calibration-design.md  partial-calibration-implementation-plan.md  partial-calibration-setup-summary.md  performance-results.md  plan-p3-ray-trace-stub-disposition.md  plan-s1-body-size-limit.md  plan-s2-request-timeout.md  plan-s3-integration-budget.md  plan-s4-admission-control.md  plan-s5-graceful-shutdown.md  plan-s5-graceful-shutdown.md.tasks.json  plan-s6-h3-validator-gaps.md  review-findings-2026-06-10.md  roadmap-2026-07-work-units.md  roadmap-2026-07.md  scalability-analysis.md  sprint1-revision-analysis.md
docs/superpowers/plans/: 2026-04-07-h3-link-budget-and-gain-cache.md  2026-04-07-h3-link-budget-and-gain-cache.md.tasks.json  2026-06-10-review-findings-fixes.md  2026-06-10-review-findings-fixes.md.tasks.json  2026-06-19-h3-beam-squint.md  2026-06-19-h3-beam-squint.md.tasks.json  2026-07-02-review-fixes.md  2026-07-02-review-fixes.md.tasks.json  2026-07-08-phase-0-guardrails.md  2026-07-08-phase-0-guardrails.md.tasks.json  2026-07-09-p1-spillover-uncalibrated.md.tasks.json  2026-07-10-p7-phase-center-auto-refocus.md  2026-07-10-p7-phase-center-auto-refocus.md.tasks.json  2026-07-12-f7-sidelobe-floor.md  2026-07-14-p10-off-axis-integrator.md  2026-07-14-p10-off-axis-integrator.md.tasks.json  2026-07-18-bincode-to-postcard-migration.md
docs/superpowers/specs/: 2026-04-07-h3-link-budget-and-gain-cache-design.md  2026-06-19-h3-beam-squint-design.md
examples/: QUICKSTART.md  README.md  README_GEO_EXAMPLES.md  README_boresight.md  README_frequency_correction.md  TESTING.md  api_requests.json  curl-examples.sh  postman_collection.json  python_examples.py
examples/requests/: batch_request.json  gain_request.json  gain_request_geodetic.json  geo_beam_squint.json  geo_feed_emitter_colocated_offset.json  geo_feed_emitter_separated.json  geo_large_feed_offset.json  geo_perfect_alignment.json  heatmap_request.json
examples/responses/: antenna_details_response.json  antenna_list_response.json  batch_response.json  error_response.json  gain_response.json  heatmap_response.json  status_response.json
helm/antenna-model/: Chart.yaml  README.md  values.yaml
helm/antenna-model/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  (+7 more)
scripts/: build-docker.sh  check.sh
superpowers/plans/: 2026-07-09-p1-spillover-uncalibrated.md  2026-07-09-p1-spillover-uncalibrated.md.tasks.json
tests/load/: QUICKSTART.md  README.md  analyze_results.sh  load_test_scenarios.js  monitor_resources.sh  run_load_tests.sh
