[package]
name = "antenna-model"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
config = "0.15.18"
ndarray = "0.16.1"
poem = { version = "3.1.12", features = ["test"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
