[package]
name = "antenna-model"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
crc32fast = "1"
config = "0.15.18"
dashmap = "6.1.0"
h3o = "0.7.0"
lru = "0.12.5"
ndarray = "0.16.1"
num-complex = "0.4.6"
parking_lot = "0.12.3"
poem = { version = "3.1.12", features = ["test"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.23.0"

[[bench]]
name = "computation_modes"
harness = false

[[bench]]
name = "aperture_integration_benchmarks"
harness = false

[[bench]]
name = "heatmap_benchmarks"
harness = false
