[package]
name = "antenna-model"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.103"
crc32fast = "1"
# default-features off drops the `heapless-cas` default, which pulls heapless 0.7
# → the unmaintained atomic-polyfill (RUSTSEC-2023-0089). We only need std ser/de.
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
config = "0.15.25"
dashmap = "6.2.0"
h3o = "0.10.0"
lru = "0.18.1"
ndarray = "0.16.1"
num-complex = "0.4.6"
parking_lot = "0.12.5"
poem = { version = "3.1.12", features = ["test"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "sync",
    "time",
] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.24.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
reqwest = { version = "0.13.4", features = ["json"] }
tempfile = "3.27.0"

[[bench]]
name = "computation_modes"
harness = false

[[bench]]
name = "aperture_integration_benchmarks"
harness = false

[[bench]]
name = "heatmap_benchmarks"
harness = false
