[package]
name = "calibrate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["ndarray_v0_15"] }
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
bincode = "2.0.1"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
ndarray = "0.15.6"  # Match argmin-math requirement
ndarray-linalg = "0.16.0"  # Match ndarray version
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Antenna model dependency for physics engine
antenna-model = { path = "../antenna-model" }
