[package]
name = "calibrate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.103"
argmin = "0.11.0"
argmin-math = { version = "0.5.0", features = ["ndarray_v0_16-nolinalg"] }
aws-config = "1.9.0"
aws-sdk-s3 = "1.138.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
crc32fast = "1"
csv = "1.4.0"
ndarray = "0.16.1"                                                         # Match argmin-math requirement
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = "1.53"
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Antenna model dependency for physics engine
antenna-model = { path = "../antenna-model" }

[dev-dependencies]
tempfile = "3.27.0"
